3.0.3/_sources/gallery/pyplots/pyplot_three.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_pyplot_three.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_pyplot_three.py:


============
Pyplot Three
============

Plot three line plots in a single call to `~matplotlib.pyplot.plot`.



.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    # evenly sampled time at 200ms intervals
    t = np.arange(0., 5., 0.2)

    # red dashes, blue squares and green triangles
    plt.plot(t, t, 'r--', t, t**2, 'bs', t, t**3, 'g^')
    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_pyplot_three_001.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:



.. code-block:: python


    import matplotlib
    matplotlib.pyplot.plot
    matplotlib.axes.Axes.plot







.. _sphx_glr_download_gallery_pyplots_pyplot_three.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: pyplot_three.py <pyplot_three.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pyplot_three.ipynb <pyplot_three.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
